presentation-client/kube/overlays/dev/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: presentation-static-files
spec:
  rules:
  - host: dev.apps.v2tools.com
    http:
      paths:
      - path: /presentations
        backend:
          serviceName: presentation-static-files
          servicePort: http
  tls:
  - hosts:
    - dev.apps.v2tools.com
    secretName: dev-apps-v2tools-crt
